@startuml

skin rose
skinparam style strictuml
skinparam backgroundColor transparent

hide empty members

interface Classfile
interface Field_info
Classfile *--> "*" Field_info
interface Method_info
Classfile *--> "*" Method_info
interface LocalVariable
Classfile -[hidden]> LocalVariable

interface SymbolGathererStrategy <<interface>>
SymbolGathererStrategy .> Classfile
SymbolGathererStrategy .> Field_info
SymbolGathererStrategy .> Method_info
SymbolGathererStrategy .> LocalVariable

class DefaultSymbolGathererStrategy
SymbolGathererStrategy <|.. DefaultSymbolGathererStrategy

class SymbolGathererStrategyDecorator
SymbolGathererStrategy <|.. SymbolGathererStrategyDecorator
SymbolGathererStrategyDecorator --> SymbolGathererStrategy : delegate

class FilteringSymbolGathererStrategy
SymbolGathererStrategyDecorator <|-- FilteringSymbolGathererStrategy

class FinalMethodOrClassSymbolGathererStrategy
SymbolGathererStrategyDecorator <|-- FinalMethodOrClassSymbolGathererStrategy

class NonPrivateFieldSymbolGathererStrategy
SymbolGathererStrategy <|.. NonPrivateFieldSymbolGathererStrategy

@enduml
